manifests/openshift/backend/skillhub/templates/deployment-config-os.yaml
##---
# Source: skillhub/templates/deployment-config-os.yaml


apiVersion: v1
kind: DeploymentConfig

metadata:
    name: backend
    labels:
        app: skillhub
        run: backend

spec:
    replicas: 1
    selector:
        run: backend
    template:
        metadata:
            labels:
                run: backend
        spec:
            containers:
            - name: backend
              image: docker-registry.default.svc:5000/skillhub/backend:latest
              imagePullPolicy: Always
              ports:
              - containerPort: 5000

    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
          automatic: true
          containerNames:
          - backend
          from:
              kind: ImageStreamTag
              name: "backend:latest"
